--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -83,6 +83,13 @@ import HeaderBurgerButton from './HeaderBurgerButton.astro';
         <div>
           <HeaderLink
             class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
+            href="/books"
+            >Books
+          </HeaderLink>
+        </div>
+        <div>
+          <HeaderLink
+            class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
             href="/about"
             >About
           </HeaderLink>
