--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,7 @@
 }
 
 .prose > ul {
-  @apply list-disc list-outside space-y-2 pl-5 text-lg text-gray-800 dark:text-gray-200;
+  @apply list-disc list-outside space-y-2 pl-5 my-5 text-lg text-gray-800 dark:text-gray-200;
 }
 
 .prose > li {
